--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
     <script>
       $(document).ready(function () {
         $(".typed").typed({
-			    strings: ["développeur web fullstack", "en deuxième année de BTS SIO"],
+			    strings: ["développeur web fullstack", "en deuxième année de BTS SIO", "développeur d'application bureau / mobile"],
 			    typeSpeed: 30,
           backDelay: 5000,
           loop: true
 		    });
+
+        $('.carousel.carousel-slider').carousel();
       });
     </script>
   </body>
